actualy fixed the issue of the media link icons getting fuzzy when I hovered on the nav by changing the z-index of the entire panel

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -29,7 +29,7 @@ nav {
   position: fixed;
   text-align: right;
   padding-right: 10%;
-  z-index: 1;
+  
   ;
 }
 
@@ -40,6 +40,7 @@ nav a {
   transition-duration: .2s;
   padding-right: 7%;
   font-size: 22px;
+  z-index: 10;
 }
 
 nav a:hover {
@@ -87,11 +88,12 @@ div.sMContainer{
   display: flex;
   flex-direction: column;
   margin: 1em;
+  z-index: 10;
   
 }
 .externalIcon{
   margin: .5em;
-  z-index: 1;
+  /* z-index: 2; */
   filter: #fff; /* IE6-9 */
   -webkit-filter: brightness(100); /* Google Chrome, Safari 6+ & Opera 15+ */
   filter: brightness(100); /* Microsoft Edge and Firefox 35+ */
